# model-merging

./: .copier-answers.yml  .gitignore  LICENSE  README.md  pyproject.toml
conf/: finetune.yaml  multitask.yaml
conf/benchmark/: N14.yaml  N2.yaml  N20.yaml  N8.yaml  hard.yaml
conf/dataset/: CIFAR10.yaml  CIFAR100.yaml  Cars.yaml  DTD.yaml  EMNIST.yaml  EuroSAT.yaml  FER2013.yaml  FashionMNIST.yaml  Flowers102.yaml  Food101.yaml  GTSRB.yaml  KMNIST.yaml  MNIST.yaml  OxfordIIITPet.yaml  PCAM.yaml  RESISC45.yaml  RenderedSST2.yaml  STL10.yaml  SUN397.yaml  SVHN.yaml
conf/hydra/launcher/: submitit_slurm.yaml
conf/merger/: dummy.yaml  iso-cts.yaml  isotropic.yaml  tsv.yaml  weight_avg.yaml
conf/nn/: default.yaml
conf/nn/encoder/: b16.yaml  b32.yaml  l14.yaml
conf/nn/module/: default.yaml  mass.yaml  smile.yaml  wemoe.yaml
conf/nn/module/aggregator/: ta.yaml  tsvm.yaml  weighted.yaml
conf/nn/module/router/: batch-proj.yaml  linear.yaml  nn.yaml  proj.yaml
conf/optim/: sgd.yaml
conf/train/: default.yaml  finetune.yaml
notebooks/: layer_analysis.ipynb  try_new_mergers.ipynb
results/ViT-B-32/: 20.json  8.json
results/finetuning/: accs.json
scripts/: evaluate_multitask_merging.py  finetune.py
src/model-merging/permutations/: utils.py
src/model_merging/: __init__.py  evaluate.py  utils.py
src/model_merging/data/: datamodule.py  dataset.py  templates.py
src/model_merging/matching/: matcher.py  repair.py  utils.py  weight_matching.py
src/model_merging/merger/: arithmetic_merger.py  dummy_merger.py  isotropic_merger.py  merger.py  tsv.py  weight_avg_merger.py
src/model_merging/merging/: structured.py  task_singular_vectors.py  task_vectors.py
src/model_merging/model/: encoder.py  heads.py  image_classifier.py
src/model_merging/permutations/: perm_graph.py  permutation_spec.py  utils.py
src/model_merging/utils/: fusion_bench_utils.py  hf_io.py  io_utils.py  plots.py  routing_methods.py  utils.py
